@@ -1,3 +1,6 @@
+14 September 2012
++ Add simultaneous overflows test
+
 21 August 2012
 + Add check_reset_mpx test
 
